--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pnpm-deploy-bug",
 	"version": "1.0.0",
-	"packageManager": "pnpm@8.0.0",
+	"packageManager": "pnpm@8.3.1",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
@@ -9,5 +9,8 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"prettier": "2.8.7"
+	}
 }
